more jvm hacks for maven