@@ -5,4 +5,5 @@
 --add-opens=java.base/java.net=ALL-UNNAMED
 --add-opens=java.base/java.text=ALL-UNNAMED
 --add-opens=java.sql/java.sql=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.font=ALL-UNNAMED
 
